fix: fixed modal gap

--- a/scss/_l-perv-ekr-v-6.scss
+++ b/scss/_l-perv-ekr-v-6.scss
@@ -791,7 +791,7 @@
       box-sizing: border-box;
       border-radius: 3px;
       background-color: #fefefe;
-      transform: translateY(-120dvh);
+      transform: translateY(-1200px);
       transition: transform ease-in-out 0.4s;
 
       @include desktop {
@@ -1052,7 +1052,7 @@
       box-sizing: border-box;
       border-radius: 3px;
       background-color: #fefefe;
-      transform: translateY(-120dvh);
+      transform: translateY(-1200px);
       transition: transform ease-in-out 0.4s;
 
       @include desktop {
